version 3.3.1
  - Update to lastest trakt dependency
  - Improved no runtime handling

version 3.3.0
  - Ported to Python 3
  - PVR channels with proper tags were not scrobbling, corrected infolabels
and added pvr progress tracking

version 3.2.4
  - Improve id matching for non-tvdb ids

version 3.2.3
  - Python 3 compatability

version 3.2.2
  - Fix communication with nextup addon

version 3.2.1
  - Use correct hook into kodi 18

version 3.2.0
  - Improved id matching for different metadata providers
  - Added various refactoring and testing
  - Improve mathing for movies with the same name
  - Moved to new language structure

version 3.1.12
  - Improved id matching for krypton+

version 3.1.11
  - Allow exclusions of plugins or scripts
  - Updates for MythTv integration
  - Allow to unrate an item on Trakt (only via integration)
  - Added some more tests

version 3.1.10
  - fix scrobling problem when using yatse to start playback
  - internal refactoring

version 3.1.9
  - fallback to only title matching if all else fails
  - updated dependencies

version 3.1.8
  - added MythTV PVR recordings scrobbling, as an option (under Scrobbler in configuration)
  - added option to perform secondary search for show title by text, if initial scrobble fails
  - small bugfix for the hungarian translations
  - don't close other windows after playback
  - bugfix for sync crashing when using paths with special characters

version 3.1.7
  - fixed expired auth tokens not getting refreshed correctly

version 3.1.6
  - fixed bug when trying to start authentication manually

version 3.1.5
  - implemented device auth flow

version 3.1.4
  - fix episode progress playback sync
  - improved movie progress playback sync
  - fix another case of the rating popup failing to show up
  - improved interaction with Nextup Service Notification addon
  - some more fixes
  - more tests

version 3.1.3
  - bugfix for movies being rated with 1 on sync