@@ -1,6 +1,9 @@
 version 3.3.1
   - Update to lastest trakt dependency
   - Improved no runtime handling
+  - Fix manual set watched
+  - Fix manual watchlisting
+  - Improve manual rating matches
 
 version 3.3.0
   - Ported to Python 3
